Allow for multiple metadata files per tex; combine into one view